tms推送数据
